fixes stats tables on mobile version

--- a/app/assets/stylesheets/custom/_polls_results_stats.scss
+++ b/app/assets/stylesheets/custom/_polls_results_stats.scss
@@ -200,6 +200,7 @@
   table {
 
     &.polls-participation,
+    &.polls-participation-letter,
     &.polls-participation-age,
     &.polls-participation-district,
     &.polls-stats-district {
@@ -212,6 +213,12 @@
     }
 
     &.polls-participation {
+      td:nth-of-type(1):before { content: "WEB"; }
+      td:nth-of-type(2):before { content: "URNAS"; }
+      td:nth-of-type(3):before { content: "TOTAL"; }
+    }
+
+    &.polls-participation-letter {
       td:nth-of-type(1):before { content: "WEB"; }
       td:nth-of-type(2):before { content: "URNAS"; }
       td:nth-of-type(3):before { content: "CORREO"; }
